add some meta content and favicon

--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -7,6 +7,10 @@ import "../styles/global.css";
 		<meta charset="UTF-8" />
 		<title>Maker</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Fast & minimal CLI tool to scaffold your dev projects" />
+    <meta name="keywords" content="cli, tool, scaffold, projects, dev" />
+    <meta name="author" content="xamyl" />
+    <link rel="icon" href="/favicon.svg" />
 	  </head>
 	  
   <body>
