--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -3,26 +3,27 @@ import "../styles/global.css";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>Maker</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Fast & minimal CLI tool to scaffold your dev projects" />
-    <meta name="keywords" content="cli, tool, scaffold, projects, dev" />
-    <meta name="author" content="xamyl" />
-    <link rel="icon" href="/favicon.svg" />
-	  </head>
-	  
+  <head>
+    <meta charset="UTF-8" />
+    <title>Maker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Fast & minimal CLI tool to scaffold your dev projects" />
+  <meta name="keywords" content="cli, tool, scaffold, projects, dev" />
+  <meta name="author" content="xamyl" />
+  <link rel="icon" href="/favicon.svg" />
+  </head>
+    
   <body>
-    <header>
-      <h1>Maker</h1>
-      <p>Fast & minimal CLI tool to scaffold your dev projects</p>
-    </header>
-    <main>
-      <slot />
-    </main>
-    <footer>
-      <p>Built by <a href="https://github.com/xamyl" style="color: white;">xamyl</a> • MIT Licensed</p>
-    </footer>
+  <header>
+    <img src="/src/assets/capy.png" width="315px" height="198px" alt="Capy" />
+    <h1>Maker</h1>
+    <p>Fast & minimal CLI tool to scaffold your dev projects</p>
+  </header>
+  <main>
+    <slot />
+  </main>
+  <footer>
+    <p>Built by <a href="https://github.com/xamyl" style="color: white;">xamyl</a> • MIT Licensed</p>
+  </footer>
   </body>
 </html>
