--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import "../styles/global.css";
     
   <body>
   <header>
-    <img src="/src/assets/capy.png" width="315px" height="198px" alt="Capy" />
+    <img src="capy.png" width="315px" height="198px" alt="Capy" />
     <h1>Maker</h1>
     <p>Fast & minimal CLI tool to scaffold your dev projects</p>
   </header>
