--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -4,6 +4,9 @@ import CodeBlock from "../components/CodeBlock.astro";
 ---
 
 <Layout>
+  <h2>⚠️ DEPRECATED</h2>
+  <p><strong>Maker is deprecated. Read more <a href="https://www.notion.so/xamyl/Deprecating-Maker-in-Favor-of-Degit-1f8a63ee0ffe80eea3b0c6202fa33f72">here</a></strong></p>
+
   <h2>🚀 What is Maker?</h2>
   <p><strong>Maker</strong> is a dead simple CLI tool for scaffolding new projects. Whether it's a website, app, or backend tool, Maker gets you started instantly.</p>
 
